@@ -36,7 +36,7 @@ class optionst;
   "(taint):(show-taint)" \
   "(show-local-may-alias)" \
   "(json):(xml):" \
-  "(unreachable-instructions)" \
+  "(unreachable-instructions)(unreachable-functions)" \
   "(intervals)(show-intervals)" \
   "(non-null)(show-non-null)"
 
