@@ -3,6 +3,7 @@
 
 * GOTO-INSTRUMENT: New option --list-calls-args
 * GOTO-INSTRUMENT: New option --print-path-lenghts
+* GOTO-ANALYZER: New option --unreachable-functions
 
 
 5.7
